--- a/Cerradura/Cerradura/Base.lproj/LaunchScreen.xib
+++ b/Cerradura/Cerradura/Base.lproj/LaunchScreen.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A282b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -14,14 +15,16 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J4m-dq-qbG">
                     <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PunkuDoorWhiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="fkU-2X-HS8">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="punkuDoorWhiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="fkU-2X-HS8">
                             <rect key="frame" x="90" y="90" width="300" height="300"/>
+                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="300" id="3Gi-OE-Rzg"/>
                                 <constraint firstAttribute="width" secondItem="fkU-2X-HS8" secondAttribute="height" id="5X5-QM-TI6"/>
                             </constraints>
                         </imageView>
                     </subviews>
+                    <animations/>
                     <color key="backgroundColor" red="0.098039215686274508" green="0.45490196078431372" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="centerX" secondItem="fkU-2X-HS8" secondAttribute="centerX" id="Dze-1b-4t9"/>
@@ -35,6 +38,7 @@
                     </variation>
                 </view>
             </subviews>
+            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="J4m-dq-qbG" secondAttribute="trailing" id="1R9-SA-Shl"/>
@@ -48,6 +52,6 @@
         </view>
     </objects>
     <resources>
-        <image name="PunkuDoorWhiteLarge" width="1000" height="1777"/>
+        <image name="punkuDoorWhiteLarge" width="1000" height="1777"/>
     </resources>
 </document>
