--- a/Cerradura/Cerradura/NewLock.storyboard
+++ b/Cerradura/Cerradura/NewLock.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="axp-cO-Bhv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A282b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="axp-cO-Bhv">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -11,6 +12,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fJ0-SQ-xaI">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
                     </navigationBar>
                     <connections>
                         <segue destination="iFW-YP-ybl" kind="relationship" relationship="rootViewController" id="slg-N7-3ZF"/>
@@ -32,14 +34,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="ZD5-bv-q91">
-                                <rect key="frame" x="290" y="290" width="20" height="20"/>
-                            </activityIndicatorView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Lock ID" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1fm-fq-VM6">
+                                <rect key="frame" x="40" y="114" width="520" height="29"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="ZD5-bv-q91" secondAttribute="centerY" id="OzM-Vh-Qp2"/>
-                            <constraint firstAttribute="centerX" secondItem="ZD5-bv-q91" secondAttribute="centerX" id="Vbc-cx-APV"/>
+                            <constraint firstItem="1fm-fq-VM6" firstAttribute="top" secondItem="ci9-jO-Xvs" secondAttribute="bottom" constant="50" id="Frs-Zz-Sz0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="1fm-fq-VM6" secondAttribute="trailing" constant="20" id="jXd-sW-v7q"/>
+                            <constraint firstItem="1fm-fq-VM6" firstAttribute="leading" secondItem="hUQ-fS-60b" secondAttribute="leadingMargin" constant="20" id="vlu-Ka-XOE"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="New Lock" id="kSl-XP-PeB">
