--- a/Cerradura/Cerradura/Base.lproj/Main.storyboard
+++ b/Cerradura/Cerradura/Base.lproj/Main.storyboard
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A282b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vuf-Dr-0ST">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A282b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Locks-->
         <scene sceneID="Qai-fn-pL1">
             <objects>
                 <navigationController id="kdO-cK-mmQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Locks" image="LockTabBarIcon" selectedImage="lockTabBarIconSelected" id="7ga-KT-Fg0"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="TgB-8P-fWe">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -21,7 +22,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AO0-OC-Y0w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2892" y="-1157"/>
+            <point key="canvasLocation" x="1304" y="-532"/>
         </scene>
         <!--Permission-->
         <scene sceneID="WPY-Yu-BhY">
@@ -31,50 +32,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="92l-Mt-mey" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2892.5" y="-679"/>
-        </scene>
-        <!--Locks-->
-        <scene sceneID="YC9-WZ-tWW">
-            <objects>
-                <navigationController id="daw-jT-4ob" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Locks" image="LockTabBarIcon" selectedImage="lockTabBarIconSelected" id="oxP-ow-mfg"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Dlt-BD-oOC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="gdG-iY-dLT" kind="relationship" relationship="rootViewController" id="dNg-Ay-kt0"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nhf-4M-tNm" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1290" y="-532"/>
-        </scene>
-        <!--Locks-->
-        <scene sceneID="oYm-bl-l2n">
-            <objects>
-                <splitViewController id="gdG-iY-dLT" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Locks" image="LockTabBarIcon" selectedImage="lockTabBarIconSelected" id="G09-Gk-4BO"/>
-                    <navigationItem key="navigationItem" title="Locks" id="gkZ-Ds-AFv"/>
-                    <connections>
-                        <segue destination="kdO-cK-mmQ" kind="relationship" relationship="masterViewController" id="uHH-VQ-gt5"/>
-                        <segue destination="KZ6-Sy-WOE" kind="relationship" relationship="detailViewController" id="6mf-bC-7Rh"/>
-                    </connections>
-                </splitViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4rT-7w-Mtd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2113" y="-532"/>
-        </scene>
-        <!--PermissionDetail-->
-        <scene sceneID="F3g-yz-nMU">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Permission" referencedIdentifier="PermissionDetail" id="KZ6-Sy-WOE" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="O8o-wu-CZo"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HgV-q7-cxb" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2709.5" y="-532"/>
+            <point key="canvasLocation" x="1939.5" y="-532"/>
         </scene>
         <!--Settings-->
         <scene sceneID="nC1-BW-LUC">
@@ -236,7 +194,7 @@
             </objects>
             <point key="canvasLocation" x="1304" y="969"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Activity-->
         <scene sceneID="Q91-5C-fPe">
             <objects>
                 <tableViewController id="I6b-B8-6wq" sceneMemberID="viewController">
@@ -269,11 +227,32 @@
                             <outlet property="delegate" destination="I6b-B8-6wq" id="p1o-RI-nbX"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="Yh3-To-Flu"/>
+                    <navigationItem key="navigationItem" title="Activity" id="Yh3-To-Flu"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WUW-Vi-vhO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2131" y="246"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="bJ1-zt-2xS">
+            <objects>
+                <splitViewController id="Mie-zY-Cnu" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="vuf-Dr-0ST" kind="relationship" relationship="masterViewController" id="ZSj-K5-YQs"/>
+                        <segue destination="dze-hL-EUO" kind="relationship" relationship="detailViewController" id="0jp-NT-SSe"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YYw-fl-2wf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-235" y="-532"/>
+        </scene>
+        <!--EmptySelection-->
+        <scene sceneID="9YG-RA-hp5">
+            <objects>
+                <viewControllerPlaceholder storyboardName="EmptySelection" id="dze-hL-EUO" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="biw-PX-QiE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-234.5" y="-72"/>
         </scene>
         <!--Activity-->
         <scene sceneID="ZMk-9e-1Jn">
@@ -306,7 +285,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="daw-jT-4ob" kind="relationship" relationship="viewControllers" id="9So-jL-UrT"/>
+                        <segue destination="kdO-cK-mmQ" kind="relationship" relationship="viewControllers" id="rN5-Hj-HGb"/>
                         <segue destination="hN2-us-aQL" kind="relationship" relationship="viewControllers" id="xGv-j4-ikN"/>
                         <segue destination="5UA-jR-8i2" kind="relationship" relationship="viewControllers" id="E3Z-tY-HHe"/>
                     </connections>
