--- a/Cerradura/Cerradura/Permission.storyboard
+++ b/Cerradura/Cerradura/Permission.storyboard
@@ -96,8 +96,12 @@
                             <outlet property="delegate" destination="lT1-nk-s1n" id="WSz-wK-9HX"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Locks" id="02r-rE-Rbf"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Locks" id="7Hv-tl-Cft">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="rTY-Hu-k9U"/>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="0ml-eF-ge5">
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
